--- a/cluster/node-pools/master-default/files.yaml
+++ b/cluster/node-pools/master-default/files.yaml
@@ -51,3 +51,19 @@ files:
     data: "{{ .Cluster.ConfigItems.service_account_private_key | base64Decode | publicKey | base64 }}"
     permissions: 0400
     encrypted: false
+  - path: /etc/kubernetes/ssl/pod-identity-service-account-key.pem
+    data: "{{ .Cluster.ConfigItems.aws_pod_identity_service_account_private_key }}"
+    permissions: 0400
+    encrypted: true
+  - path: /etc/kubernetes/ssl/pod-identity-service-account-public-key.pem
+    data: "{{ .Cluster.ConfigItems.aws_pod_identity_service_account_private_key | base64Decode | publicKey | base64 }}"
+    permissions: 0400
+    encrypted: false
+  - path: /var/www/openid-configuration/discovery.json
+    data: "{{ generateOidcDiscoveryDocument .Cluster.LocalID .Values.hosted_zone | base64 }}"
+    permissions: 0644
+    encrypted: false
+  - path: /var/www/openid-configuration/keys.json
+    data: "{{ .Cluster.ConfigItems.service_account_private_key | base64Decode | publicKey | generateJWKSDocument | base64 }}"
+    permissions: 0644
+    encrypted: false
