--- a/cluster/node-pools/master-default/userdata.yaml
+++ b/cluster/node-pools/master-default/userdata.yaml
@@ -124,6 +124,9 @@ write_files:
           - --service-account-signing-key-file=/etc/kubernetes/ssl/service-account-private-key.pem
           - --service-account-issuer=kubernetes/serviceaccount
           {{- end }}
+          - --service-account-key-file=/etc/kubernetes/ssl/pod-identity-service-account-public-key.pem
+          - --service-account-signing-key-file=/etc/kubernetes/ssl/pod-identity-service-account-key.pem
+          - --service-account-issuer=https://{{.Cluster.LocalID}}.{{.Values.hosted_zone}}/
           {{ if ne .Cluster.ConfigItems.audittrail_url "" }}
           - --audit-webhook-config-file=/etc/kubernetes/config/audit.yaml
           - --audit-webhook-mode=batch
@@ -394,6 +397,10 @@ write_files:
               -> setPath("/healthz")
               -> disableAccessLog()
               -> "http://127.0.0.1:8080";
+            o: Path("/.well-known/openid-configuration/*")
+              -> setResponseHeader("Content-Type", "application/json")
+              -> static("/.well-known/openid-configuration/", "/var/www/openid-configuration")
+              -> <shunt>;
             all: *
               -> disableAccessLog()
               -> "https://127.0.0.1:443";
@@ -417,6 +424,9 @@ write_files:
           - mountPath: /etc/kubernetes/ssl
             name: ssl-certs-kubernetes
             readOnly: true
+          - mountPath: /var/www/openid-configuration 
+            name: openid-configuration
+            readOnly: true
         - name: etcd-proxy
           image: registry.opensource.zalan.do/teapot/etcd-proxy:master-3
           args:
@@ -437,6 +447,9 @@ write_files:
         - hostPath:
             path: /etc/kubernetes/nginx
           name: config-volume
+        - hostPath:
+            path: /var/www/openid-configuration
+          name: openid-configuration
 
   - owner: root:root
     path: /etc/kubernetes/manifests/kube-controller-manager.yaml
